fixed: overflow issue in the container, and removed left and right padding from the layout on tablet view in Network

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -198,9 +198,10 @@ body * {
 }
 
 .page-container {
-  width: 1200px;
+  width: calc(100% - 6rem);
+  max-width: 1200px;
   margin: 0 auto;
-  /* overflow:auto; */
+  padding: 0 3rem;
 }
 
 /* For mobile devices */
